syntax = "proto3";

package model;

option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

service CardsService {
  rpc validateCard (Card) returns (google.protobuf.BoolValue) {
  }
}

message Card {
  string cardNumber = 1;
  string cardOwner = 2;
}